# pFinance

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
database/: schema.sql
src/pfinance/: __init__.py  main.py
tests/: test_main.py
