[metadata]
name = pfinance
version = attr: pfinance.__version__
description = Getting a grip on my personal finances
author = Theodor Blom
licence = MIT
licence_file = LICENCE
platforms = unix, linux, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10

[options]
packages = 
  pfinance
install_requires = 

python_requires = >=3.10
package_dir =
  = src
zip_safe = no

[options.extras_require]
testing =
  pytest >= 6.0

[options.entry_points]
console_scripts =
  pfinance = pfinance.main:main
