[metadata]
name = pfinance
version = attr: pfinance.__version__
description = Visualize your spending with python and pandas
author = Theodor Blom
licence = MIT
licence_file = LICENCE
platforms = unix, linux, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10

[options]
packages = 
  pfinance
install_requires = 
  pandas
  odfpy

python_requires = >=3.10
package_dir =
  = src
zip_safe = no

[options.extras_require]
testing =
  pytest >= 7.0
  pytest-cov >= 4.0

[tool:pytest]
addopts = --cov=src/

[coverage:run]
branch = True
omit = src/pfinance/__init__.py

[coverage:report]
show_missing = True
skip_covered = True

[options.entry_points]
console_scripts =
  pfinance = pfinance.main:main
